# robotarm_ros2

./: INTERACTIVE_ACCEPTANCE_ZH.md  INTERACTIVE_SYSTEM_STATUS_ZH.md  MOVEIT_HARDWARE_USAGE_ZH.md  README_zh.md  REAL_HARDWARE_PRECHECK_ZH.md  USAGE_zh.md
src/rebotarm_bringup/: package.xml  setup.py
src/rebotarm_bringup/config/: driver_params.yaml  gripper.yaml
src/rebotarm_bringup/launch/: bringup.launch.py  driver_only.launch.py  interactive_basic.launch.py  interactive_system.launch.py  moveit_hardware.launch.py  rviz.launch.py
src/rebotarm_bringup/rviz/: interactive_system.rviz  rebotarm.rviz
src/rebotarm_interactive_control/: README.md  package.xml  setup.cfg  setup.py
src/rebotarm_interactive_control/config/: interactive_control.yaml  interactive_debug.yaml
src/rebotarm_interactive_control/launch/: interactive_basic.launch.py  interactive_debug.launch.py  interactive_stage5_debug.launch.py  marker_server_debug.launch.py  preview_debug.launch.py
src/rebotarm_interactive_control/rebotarm_interactive_control/: __init__.py  command_models.py  execution_coordinator.py  execution_node.py  interactive_marker_smoke_node.py  interactive_target_node.py  marker_builder.py  marker_server_node.py  message_codec.py  mode_manager.py  moveit_planner.py  parameter_helpers.py  pose_math.py  pose_preview_solver.py  preview_manager.py  preview_node.py
src/rebotarm_interactive_control/rviz/: interactive_debug.rviz  marker_server_debug.rviz
src/rebotarm_moveit_config/: README_zh.md  package.xml  setup.cfg  setup.py
src/rebotarm_moveit_config/config/: kinematics.yaml  move_group_planning.yaml  moveit_controllers.yaml  moveit_cpp.yaml  ompl_planning.yaml  pilz_cartesian_limits.yaml  reBot-DevArm_fixend.srdf  rebotarm.srdf  rebotarm.urdf  sensors_3d.yaml
src/rebotarm_moveit_config/launch/: demo.launch.py
src/rebotarm_moveit_config/rviz/: moveit.rviz
src/rebotarm_msgs/: CMakeLists.txt  package.xml
src/rebotarm_msgs/action/: MoveToPose.action
src/rebotarm_msgs/msg/: ArmStatus.msg  JointMotorCmd.msg
src/rebotarm_msgs/srv/: MoveToPoseIK.srv
src/rebotarmcontroller/: package.xml
src/rebotarmcontroller/rebotarmcontroller/: rebotarm_controller.py  (+1 more)
tests/: test_interactive_control_phase1.py
(+1 files in other folders)
